--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="formelement">
             <label for="phoneNo">Phone No</label>
             <input 
-                type="number" 
+                type="tel" 
                 name="phoneNo" 
                 id="phoneNo"
-                pattern="[0-9]{10}"
-                placeholder="123456789" 
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                placeholder="064-807-0417" 
                 required
             >
         </div>
