--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             text-align: right;
         }
 
+        /* STYLES FOR THE SHOW/HIDE PASSWORD CHECKBOX */
+        .show-password-container {
+            margin-left: 205px;
+            margin-top: 5px;
+            height: 20px;
+        }
+        .show-password-container input {
+            width: auto; /* Override default input width */
+            position: relative;
+            top: 2px;
+        }
+        .show-password-container label {
+            width: auto; /* Override default label width */
+            float: none;
+            position: static;
+            font-size: 0.8rem;
+        }
+        /* END NEW STYLES */
+
         #submitBtn{
             width: 130px;
             margin-left: 200px;
