--- a/index.html
+++ b/index.html
@@ -103,11 +103,19 @@
         <div class="formelement">
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
+            <div class="show-password-container">
+                <input type="checkbox" id="showPasswordToggle">
+                <label for="showPasswordToggle">Show Password</label>
+            </div>
         </div>
-
+    
         <div class="formelement">
             <label for="confirmpassword">Confirm Password</label>
             <input type="password" name="confirmpassword" id="confirmpassword">
+                <div class="show-password-container">
+                <input type="checkbox" id="showConfirmPasswordToggle">
+                <label for="showConfirmPasswordToggle">Show Password</label>
+            </div>
         </div>
 
         <input id="submitBtn" type="submit" value="Submit">
